tests/neg-macros/i18677-a/Test_2.scala
//> using options -experimental

@extendFoo
class AFoo // error